--- a/Changes
+++ b/Changes
@@ -3,3 +3,6 @@ Revision history for Dancer-Plugin-Auth-Github
 0.01    1-1-2013
         First version, released to welcome the new year.
 
+0.02    1-1-2013
+        Bad upload to CPAN required a rename of file. No real functional changes.
+
